--- a/templates/bookings/index.html.twig
+++ b/templates/bookings/index.html.twig
@@ -10,7 +10,7 @@
 </style>
 
 <div class="container-fluid">
-    <p class="h1">Make a booking in station {{ bookings[0].station.id }}</p>
+    <p class="h1">Make a booking in station {{ station_id }}</p>
      {{ form(form) }}
     {% if message == 'Make a booking!' %}
         <div class="alert alert-primary" role="alert">
@@ -18,6 +18,16 @@
         </div>
     {% endif %}
     {% if message== 'Bookings must take at most two hours!' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+    {% endif %}
+    {% if message== 'This car does not exist in the database!' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+    {% endif %}
+    {% if message== 'This car already has a booking in that timeframe!' %}
         <div class="alert alert-danger" role="alert">
             {{ message }}
         </div>
@@ -32,7 +42,7 @@
             {{ message }}
         </div>
     {% endif %}
-    <button type="button" class="btn btn-primary"><a href="/">Go back</a></button>
+    <button type="button" class="btn btn-primary"><a href={% if app.user %} {{ path('app_station') }} {% else %} {{ path('app_register') }}>Go back</a></button>
     <table class="table">
         <thead>
         <tr>
@@ -40,6 +50,7 @@
             <th scope="col">Booking Station ID</th>
             <th scope="col">Booking Location</th>
             <th scope="col">Booking City</th>
+            <th scope="col">Booking Car License Plate</th>
             <th scope="col">Booking Charge Start</th>
             <th scope="col">Booking Charge End</th>
         </tr>
@@ -51,6 +62,7 @@
                 <td > {{ booking.station.id }}</td>
                 <td > {{ booking.station.location.name }}</td>
                 <td > {{ booking.station.location.city }}</td>
+                <td > {{ booking.car.licensePlate }}</td>
                 <td > {{ booking.chargeStart|date('d-m-Y H:i') }}</td>
                 <td> {{ booking.chargeEnd|date('d-m-Y H:i') }}</td>
             </tr>
