--- a/templates/station/index.html.twig
+++ b/templates/station/index.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StationController!
+{% block title %}ChargeIT Stations
     {% include '/form/index.html.twig' %}
+{% endblock %}
+
+{% block head %}
+    <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="{{ asset('assets/app.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -10,11 +16,17 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     .h1 {text-align: center; color: green;}
+    a {color: black}
+    .table {text-align: center}
+    #map {height: 800px;}
 </style>
 <div class="container-fluid">
     <p class="h1">Welcome to ChargeIT!</p>
     <p class="h3">Check out our charging stations!</p>
     {{ form(form) }}
+    <button class="button"><a href="{{ path('app_logout') }}">Log out</a> </button>
+{#    <div id="map"><iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=19.138183593750004%2C42.98859748936762%2C30.849609375000004%2C48.82135147955914&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/></div>#}
+    <div id="map" style="height: 800px"></div>
     <table class="table">
         <thead>
         <tr>
@@ -34,10 +46,17 @@
                     <td > {{ station.location.city }}</td>
                     <td> {{ station.power }}</td>
                     <td> {{ station.type }}</td>
-                    <td> <a href= /stations/{{ station.id ~ url }}>Book</a> </td>
+                    <td> <button><a href= /stations/{{ station.id ~ url }}>Book</a></button> </td>
                 </tr>
         {% endfor %}
         </tbody>
     </table>
 </div>
+    <script>
+        if (window.history.replaceState) {
+            window.history.replaceState( null, null, window.location.href );
+        }
+        let long = 25, lat = 45.95, zoom = 7;
+        let map = GenerateMap(long, lat, zoom);
+    </script>
 {% endblock %}
